Added an icon, a download location, and am working on a settings file.

--- a/youtube-dl gui/settings.config
+++ b/youtube-dl gui/settings.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="file format" value="0" />
-    <add key="download folder" value="" />
+    <add key="file format" value="audio" />
+    <add key="download folder" value="C:\Users\Enso\Desktop\" />
   </appSettings>
 </configuration>
