Currently encapsulating the building of the command line string. Also something broke. Damm.

--- a/youtube-dl gui/youtube-dl gui.csproj
+++ b/youtube-dl gui/youtube-dl gui.csproj
@@ -67,6 +67,7 @@
     <Compile Include="About Window.Designer.cs">
       <DependentUpon>About Window.cs</DependentUpon>
     </Compile>
+    <Compile Include="CLIString.cs" />
     <Compile Include="main Window.cs">
       <SubType>Form</SubType>
     </Compile>
