--- a/youtube-dl gui/App.config
+++ b/youtube-dl gui/App.config
@@ -1,6 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="youtube_dl_gui.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <userSettings>
+        <youtube_dl_gui.Properties.Settings>
+            <setting name="keepBothChecked" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="geoBypassChecked" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="writeThumbnailChecked" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="writeSubsChecked" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="writeAutoSubsChecked" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </youtube_dl_gui.Properties.Settings>
+    </userSettings>
 </configuration>
