Settings somewhat implemented, need some touching up, such as making sure two of the same items don't end up in the downloadFolderComboBox.

--- a/youtube-dl gui/App.config
+++ b/youtube-dl gui/App.config
@@ -25,6 +25,12 @@
             <setting name="writeAutoSubsChecked" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="fileFormat" serializeAs="String">
+                <value>Audio</value>
+            </setting>
+            <setting name="downloadFolder" serializeAs="String">
+                <value />
+            </setting>
         </youtube_dl_gui.Properties.Settings>
     </userSettings>
 </configuration>
